# Authorized-Security-Auditor-Skill

./: .gitignore  AGENTS.md  BRANDING.md  BUILD_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  PROMPTS.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample-finding.md  sample-scope.yaml
references/: audit-methodology.md  authorization-gates.md  client-deliverables.md  database-security.md  evidence-handling.md  limitations.md  remediation-and-retest.md  severity-and-triage.md  stack-checklists.md  threat-modeling.md  tool-safety-matrix.md
scripts/: install.ps1  install.sh  validate-release.py
security_audit_skill/: __init__.py  branding.py  cli.py  redaction.py  validators.py
templates/: asset-register.csv  authorization-matrix.csv  authorization.md  critical-notification.md  data-inventory.csv  executive-report.md  remediation-tracker.csv  retest-report.md  risk-acceptance.md  rules-of-engagement.md  scope.yaml  status-update.md  technical-finding.md  technical-report.md
templates/branding/: BRANDING.md
tests/: test_branding.py  test_redaction.py  test_validators.py
