[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authorized-security-auditor-skill"
version = "1.1.0"
description = "Safety-gated security audit skill and validation utilities for coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Bigdoor AI Labs Pte. Ltd.", email = "viisesh@bigdoor.ai" }
]
dependencies = [
  "PyYAML>=6.0.2,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1"
]

[project.urls]
Homepage = "https://bigdoor.ai"

[project.scripts]
authorized-security-auditor = "security_audit_skill.cli:main"

[tool.setuptools]
packages = ["security_audit_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
